--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             overflow-x: hidden; 
             padding-top: 64px; 
         }
-        
+        #heroVideo1 {
+            z-index: 0;
+        }
         .fade-in-from-top {
             opacity: 0;
             transform: translateY(-50px);
