--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
     <section class="relative w-full h-screen overflow-hidden flex items-center justify-center bg-black z-0">
         <video id="heroVideo1" autoplay muted playsinline class="absolute inset-0 w-full h-full object-cover">
-            <source src="https://x-battery.vercel.app/assets/videos/Xbattery-HD.mp4" type="video/mp4">
+            <source src="/assets/videos/Xbattery-Hd.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
